# claude-settings

./: .gitignore  CLAUDE.md  README.md  install.sh
.claude/commands/: github.md
commands/: new-app.md
common/rules/: git.md
profiles/default/: CLAUDE.md  settings.json
profiles/java/: CLAUDE.md  settings.json
profiles/java/rules/: java.md  testing.md
profiles/python/: CLAUDE.md  settings.json
profiles/python/rules/: python.md  testing.md
profiles/python/templates/: pyproject.toml
profiles/typescript/: CLAUDE.md  settings.json
profiles/typescript/rules/: testing.md  typescript.md
profiles/typescript/templates/: .eslintrc.json
